[gd_scene load_steps=5 format=2]

[ext_resource path="res://DrawBox.gd" type="Script" id=1]
[ext_resource path="res://fonts/SubMenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://AnswerDraw.gd" type="Script" id=3]
[ext_resource path="res://res/Fabric19.jpg" type="Texture" id=4]

[node name="VBoxContainerDraw" type="VBoxContainer"]
margin_top = 170.0
margin_right = 432.0
margin_bottom = 694.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1
script = ExtResource( 1 )

[node name="LabelDraw" type="Label" parent="."]
margin_right = 432.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="AnswerDraw" type="Control" parent="."]
margin_top = 43.0
margin_right = 432.0
margin_bottom = 475.0
rect_min_size = Vector2( 432, 432 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="AnswerDraw"]
show_behind_parent = true
position = Vector2( 306.957, 208.703 )
scale = Vector2( 0.373909, 0.321247 )
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 479.0
margin_right = 432.0
margin_bottom = 524.0

[node name="ButtonClearDrawing" type="Button" parent="HBoxContainer"]
margin_right = 12.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )

[node name="ButtonUndoDrawing" type="Button" parent="HBoxContainer"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
[connection signal="gui_input" from="AnswerDraw" to="AnswerDraw" method="_on_AnswerDraw_gui_input"]
[connection signal="pressed" from="HBoxContainer/ButtonClearDrawing" to="." method="_on_ButtonClearDrawing_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonUndoDrawing" to="." method="_on_ButtonUndoDrawing_pressed"]
